# lalalabs

./: README.md  rules.md
1/: a.out  for_flags.h  solution.c  task.md
10/: a.out  realization.c  solution.c  test.c
2/: a.out  functions.h  realization.c  solution.c  test.c
3/: a.out  for_flags.h  solution.c  task.md
4/: realization_flags.c  solution.c
5/: a.out  functions.h  realization.c  solution.c
6/: functions.h  solution.c
7/: input.txt  realization_of_flags.c  solution.c  task.md
8/: realization.c  solution.c
9/: README.md  functions.h  realization.c  solution.c
Lab5/1/: a.out  solution.cpp
Lab5/2/: a.out  decrypted.txt  encrypted.txt  encrypted2.txt  solution.cpp
Lab5/3/: README.md  a.out  solution.cpp
Lab5/4/: a.out  solution.cpp
Lab5/5/: README.md  a.out  input.txt  sol.cpp
Lab5/6/: CMakeLists.txt  README.md  main.cpp  unit.cpp  vector.cpp  vector.hpp
Lab5/7/: README.md  a.out  solution.cpp  warehouse.cpp  warehouse.hpp
lab1/1/: for_flags.h  gdb.c  solution.c
lab1/10/: functions.h  solution.c  task.md
lab1/2/: functions.h
lab1/3/: tests.txt
lab1/4/: a.out  functions.h  gdb.c  input.txt  out_input.txt  output.txt  proccessing_file_path.c  task.md  tests.txt
lab1/5/: solution.c
lab1/6/: a.out  realization.c
lab1/7/: a.out  file1.txt  file2.txt  functions.h  gdb.c  output.txt  proccessing_file_paths.c
lab1/8/: a.out  functions.h  gdb.c  output.txt  task.md  test.txt
lab1/9/: a.out  functions.h  output.txt
lab2/1/: README.md  a.out  functions.h  realization.c  solution.c
lab2/10/: solution.c
lab2/2/: README.md  (+4 more)
(+89 files in other folders)
